--- a/common/model_estimation.tex
+++ b/common/model_estimation.tex
@@ -49,8 +49,8 @@ $
               \imark&Depend on derivatives $\ds\dndxn\ff(x)$        &Depend on integrals   $\ds\int_{x\in\R} \ff(x)e^{-i\omega x} \dx$
             \\\imark&Behavior in the vicinity of a point.           &Behavior over the entire function.
             \\\imark&Demonstrate trends locally.                    &Demonstrate trends globally. %, such as oscillations.
-            \\\imark&Admits \prope{analytic} functions only---      &Admits \prope{non-analytic} functions as well---
-            \\      &must be \prope{continuous}.                    &even if they are \prope{discontinuous}.
+            \\\imark&Admits \prope{analytic} functions only.        &Admits \prope{non-analytic} functions as well.
+            \\\imark&Function must be \prope{continuous}.           &Function can be \prope{discontinuous}.
             \\\hline
         \end{tabular}
 \end{enumerate}
