--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -277,23 +277,21 @@
 %---------------------------------------
 % book citations
 %---------------------------------------
-%\newcommand{\fullcite}{\bibentry}
 \newcommand{\fullcite}{\cite}
 \newcommand{\citefull}[1]{\citebullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}
 \newcommand{\citer}   [1]{\citebullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
-\newcommand{\citerp}  [2]{\citebullet\;\cite{#1}, page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citerps} [2]{\citebullet\;\cite{#1}, pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citerpp} [3]{\citebullet\;\cite{#1}, pages #2--#3\index[xref]{{\cite{#1}}}} % citation table entry with ref and page range
+\newcommand{\citerp}  [2]{\citebullet\;\cite{#1} page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citerps} [2]{\citebullet\;\cite{#1} pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citerpp} [3]{\citebullet\;\cite{#1} pages #2--#3\index[xref]{{\cite{#1}}}} % citation table entry with ref and page range
 \newcommand{\citerc}  [2]{\citebullet\;\cite{#1} \lcomdelim#2\rcomdelim} % citation table entry with ref and one comment
 \newcommand{\citeru}  [2]{\citebullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeruc} [3]{\citebullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
-\newcommand{\citerpc} [3]{\citebullet\;\cite{#1}, page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citerppc}[4]{\citebullet\;\cite{#1}, pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citerpc} [3]{\citebullet\;\cite{#1} page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citerppc}[4]{\citebullet\;\cite{#1} pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 
 %---------------------------------------
 % OEIS citations
 %---------------------------------------
-%\newcommand{\citeOc}  [3]{\citeWbullet\;\cite{#1} \lcomdelim#2\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeO}  [2]{{\scs\citeWbullet}\;\cite{#1}\;\url{http://oeis.org/#2}} % OEIS citation
 \newcommand{\citeOc} [3]{{\scs\citeWbullet}\;\cite{#1}\;\url{http://oeis.org/#2}\;\lcomdelim{#3}\rcomdelim} % OEIS citation
 
@@ -334,16 +332,16 @@
 %---------------------------------------
 \newcommand{\citeIfull}[1]{\citeIbullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
 \newcommand{\citeI}    [1]{\citeIbullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
-\newcommand{\citeIp}   [2]{\citeIbullet\;\cite{#1}, page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citeIps}  [2]{\citeIbullet\;\cite{#1}, pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citeIpp}  [3]{\citeIbullet\;\cite{#1}, pages #2--#3\index[xref]{{\cite{#1}}}} % citation table entry with ref and page range
+\newcommand{\citeIp}   [2]{\citeIbullet\;\cite{#1} page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIps}  [2]{\citeIbullet\;\cite{#1} pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIpp}  [3]{\citeIbullet\;\cite{#1} pages #2--#3\index[xref]{{\cite{#1}}}} % citation table entry with ref and page range
 \newcommand{\citeIc}   [2]{\citeIbullet\;\cite{#1} \lcomdelim#2\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeIu}   [2]{\citeIbullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citeIuc}  [3]{\citeIbullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
-\newcommand{\citeIpc}  [3]{\citeIbullet\;\cite{#1}, page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citeIppc} [4]{\citeIbullet\;\cite{#1}, pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citeIpu}  [3]{\citeIbullet\;\cite{#1}, page~#2 \lcomdelim\url{#3}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citeIppu} [4]{\citeIbullet\;\cite{#1}, pages #2--#3 \lcomdelim\url{#4}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIpc}  [3]{\citeIbullet\;\cite{#1} page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIppc} [4]{\citeIbullet\;\cite{#1} pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIpu}  [3]{\citeIbullet\;\cite{#1} page~#2 \lcomdelim\url{#3}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citeIppu} [4]{\citeIbullet\;\cite{#1} pages #2--#3 \lcomdelim\url{#4}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citeIpg}  [3]{\citeIbullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citeIpgc} [4]{\citeIbullet\;\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citeIg}   [2]{\citeIbullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
@@ -395,8 +393,8 @@
 \newcommand{\cittu}    [1]{\citetbl{\citebullet\;\url{#1}}}
 \newcommand{\cittrc}   [2]{\citetbl{\citerc{#1}{#2}}}
 \newcommand{\cittrpc}  [3]{\citetbl{\citerpc{#1}{#2}{#3}}}
-\newcommand{\cittrp}   [2]{\citetbl{\citebullet\;\cite{#1}, {page~#2}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
-\newcommand{\cittrpp}  [3]{\citetbl{\citebullet\;\cite{#1}, {pages~#2--#3}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
+\newcommand{\cittrp}   [2]{\citetbl{\citebullet\;\cite{#1} {page~#2}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
+\newcommand{\cittrpp}  [3]{\citetbl{\citebullet\;\cite{#1} {pages~#2--#3}\index[xref]{{\cite{#1}}}}} % citation with google book search link to page
 \newcommand{\cittrppc} [4]{\citetbl{\citerppc{#1}{#2}{#3}{#4}}}
 \newcommand{\cittrcu}  [3]{\citetbl{\citebullet\;\cite{#1}, \href{#3}{#2}\index[xref]{{\cite{#1}}}}} 
 \newcommand{\cittrpu}  [3]{\citetbl{\citebullet\;\cite{#1}, \href{#3}{page~#2}\index[xref]{{\cite{#1}}}}} % citation table entry with ref and one page
