make Fourier convolution results dependent on Laplace convolution results

--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -369,7 +369,7 @@ complex numbers.
 
 
 %======================================
-\section{Convolution}
+\section{Convolution relations}
 \label{sec:conv}
 \index{convolution}
 %======================================
@@ -415,27 +415,16 @@ and $\conv$ the convolution operator \xref{def:conv}.
 \begin{proof}
 \begin{align*}
    \opFT \brs{\ff(x)\conv\fg(x)}(\omega)
-     &= \opFT \brs{ \int_{u\in\R} \ff(u)\fg(x-u) \du }(\omega)
-     && \text{by definition of $\conv$ (\prefp{def:conv})}
-   \\&=  \int_{u\in\R} \ff(u)\brs{\opFT \fg(x-u)}(\omega) \du 
-   \\&=  \int_{u\in\R} \ff(u) \fkernea{u}{\omega} \; \brs{\opFT\fg(x)}(\omega) \du 
-     && \text{by \prefp{thm:ft_shift}}
-   \\&= \sqrt{2\pi}\mcom{\brp{\frac{1}{\sqrt{2\pi}}\int_{u\in\R} \ff(u) \fkernea{u}{\omega} \du}}
-             {$\brs{\opFT\ff}(\omega)$} \; 
-        \brs{\opFT\fg}(\omega)
-   \\&= \sqrt{2\pi}\brs{\opFT\ff}(\omega)\;  \brs{\opFT\fg}(\omega)
-     && \text{by definition of $\opFT$ (\prefp{def:opFT})}
+     &= \brlr{\opLT \brs{\ff(x)\conv\fg(x)}(s)}_{s=i\omega}
+     && \text{by definition of $\opLT$} && \text{\xref{def:opLT}}
+   \\&= \brlr{\sqrt{2\pi}\brs{\opLT\ff}(s)\, \brs{\opLT\fg}(s)}_{s=i\omega}
+     && \text{by \thme{Laplace convolution} result} && \text{\xref{thm:opLT_conv}}
+   \\&= \sqrt{2\pi}\brs{\opFT\ff}(\omega)\, \brs{\opFT\fg}(\omega)
    \\
    \opFT[\ff(x)\fg(x)](\omega)
-     &= \opFT\brs{\brp{\opFTi\opFT\ff(x)}\;\fg(x)}(\omega)
-     && \text{by definition of operator inverse \ifdochas{operator}{(\prefpo{def:op_inv})}}
-   \\&= \opFT\brs{\brp{ \fscalei \int_{v\in\R} \brs{\opFT\ff(x)}(v) \fkerne{x}{v} \dv }\;\fg(x)}(\omega)
-     && \text{by \prefp{thm:opFTi}}
-   \\&= \fscalei \int_{v\in\R} \brs{\opFT\ff(x)}(v) \brs{\opFT\brp{\fkerne{x}{v} \;\fg(x)}}(\omega,v) \dv 
-   \\&= \fscalei \int_{v\in\R} \brs{\opFT\ff(x)}(v) \brs{\opFT\fg(x)}(\omega-v) \dv 
-     && \text{by \prefp{thm:ft_shift}}
-   \\&= \fscalei\brs{\opFT\ff}(\omega)\conv \brs{\opFT\fg}(\omega)
-     && \text{by definition of $\conv$ (\prefp{def:conv})}
+     &= \brlr{\opLT[\ff(x)\fg(x)](s)}_{s=i\omega}
+   \\&= \brlr{\fscale\brs{\opLT\ff}(s) \conv \brs{\opLT\fg}(s)}_{s=i\omega}
+   \\&= \fscale\brs{\opFT\ff}(\omega) \conv \brs{\opFT\fg}(\omega)
 \end{align*}
 \end{proof}
 
